testsuite/lab2-testsuite/good/arg_mutation_pdec.cc
void cdec(int c) {
  c--;
}

int main () {
  let int c = 1;
  cdec(--c);
  printInt(c);

  return 0;
}
