testsuite/lab2-testsuite/bad/ass_int_bool.cc
int main() {
        let int x;
        x = true;
        return 1;
}
